<resources>
    <string name="app_name">Birds of a Feather</string>
    <string name="app_title">Birds of a Feather</string>
    <string name="default_person_text">Missing person!</string>
    <string name="title_activity_person_detail">PersonDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_back">Go Back</string>
    <string name="first_name">First Name</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="or">OR</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_mock">Add New Student</string>
    <string name="bluetooth_required">Bluetooth Required</string>
    <string name="bluetooth_prompt">Bluetooth connection is required for this app. Please turn on Bluetooth for your device in your settings.</string>
    <string name="paste_the_url_here">Paste the URL here!</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="go_to_settings">Request Permissions</string>
    <string name="not_now">Enable in Settings</string>

    <!-- Strings for add classes activity -->
    <string name="add_your_classes">Add Classes</string>
    <string name="edit_your_classes">Edit Class</string>
    <string name="current_added_classes">Added Classes:</string>
    <string name="add_another_class">Add another Class</string>
    <string name="btn_confirm">Add</string>
    <string name="btn_confirm_2">Confirm</string>
    <string name="btn_finish">Finish!</string>
    <string name="btn_done">Done</string>

    <!-- Strings for dialog box -->
    <string name="error_title">Alert!</string>
    <string name="error_message_1">Make sure to enter in all of the fields!</string>
    <string name="error_message_2">You have already added this class!</string>
    <string name="error_message_3">You have to add at least one class!</string>
    <string name="error_message_4">Make sure you either sign in with google or enter your name!</string>
    <string name="close">Close</string>

    <!-- String array for years -->
    <string-array name="year_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="quarter_array">
        <item>F</item>
        <item>W</item>
        <item>SP</item>
        <item>SS1</item>
        <item>SS2</item>
    </string-array>

    <string-array name="subject_array">
        <item>CSE</item>
        <item>ECE</item>
    </string-array>

    <string-array name="classSize_array">
        <item>Tiny (0-40)</item>
        <item>Small (41-75)</item>
        <item>Medium (76-150)</item>
        <item>Large (151-250)</item>
        <item>Huge (251-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>
</resources>