<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> cc6855209afbc17a40bb613bdbc517e1d041b148
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
<<<<<<< HEAD
    android:background="@drawable/bottom_back"
    tools:context=".btActivity"
    tools:ignore="ExtraText">

    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:src="@drawable/ic_baseline_horizontal_rule_24_red" />-->

    <!-- I don't know why but the color doesn't change. -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="0dp"
=======
    android:padding="15dp"
    tools:context=".btActivity">
    <TextView
        android:id="@+id/promptbt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>>>>>>> cc6855209afbc17a40bb613bdbc517e1d041b148
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_required"
        android:textColor="@color/black"
        android:textSize="25dp"
<<<<<<< HEAD
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" /><![CDATA[
    ]]>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="355dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_prompt"
        android:textSize="16.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /><![CDATA[
    />
    ]]>

    <android.widget.Button
        android:id="@+id/btn_Setting"
        style="@style/btn_standard"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:background="@drawable/bof_btn"
        android:gravity="center_horizontal"
=======
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/promptbt_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_prompt"
        android:textSize="19.5dp"
        app:layout_constraintTop_toBottomOf="@id/promptbt_title" />

   <!-- I don't know why but the color doesn't change. -->
    <android.widget.Button
        android:id="@+id/promptbt_btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/btn_standard"
        android:text="@string/go_to_settings"
        android:textSize="18dp"
>>>>>>> cc6855209afbc17a40bb613bdbc517e1d041b148
        android:paddingLeft="18dp"
        android:paddingTop="10dp"
        android:paddingRight="18dp"
        android:paddingBottom="10dp"
        android:text="Go to Settings"
        android:textAlignment="center"
        android:textAllCaps="false"
<<<<<<< HEAD
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btn_not"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:text="Not Now"
        android:textAllCaps="false"
        android:textColor="@color/pinkish"
        android:textSize="18dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="197dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
=======
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/promptbt_prompt"/>

    <Button
        android:id="@+id/promptbt_btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:text="@string/not_now"
        android:textColor="@color/pinkish"
        android:textSize="18dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/promptbt_btn_request"/>
>>>>>>> cc6855209afbc17a40bb613bdbc517e1d041b148

</androidx.constraintlayout.widget.ConstraintLayout>